Update no ex022 fundo005

--- a/exercicios/ex022/fundo005.html
+++ b/exercicios/ex022/fundo005.html
@@ -4,9 +4,47 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo fixo de tela</title>
+    <style>
+        body {
+            height: 100vh;
+            background-color: black;
+            background-image: url('imagens/wallpaper002.jpg');
+            background-position: center center;
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-attachment: fixed;
+
+            /*shorthand bacground
+            color > image > position > repeat > [size] > attachment
+            Amas da formas são validas
+            */
+            background: black url('imagens/wallpaper002.jpg') center center  cover no-repeat fixed;
+            background-size: cover;
+        }
+
+        main {
+            background-color: white;
+            max-width: 400px;
+            padding: 10px;
+            margin: auto;
+            border: 1px solid darkblue;
+            border-radius: 15px;
+        }
+    </style>
 </head>
 <body>
-    
+    <main>
+        <h1>Teste</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex vitae error eius laudantium labore autem, sapiente quis officia, libero natus sunt sed et ad est necessitatibus illum adipisci deleniti. Ducimus. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolor vel voluptatibus ex et eligendi enim sapiente nobis odit ipsam non? Ipsum fugiat hic eos aperiam rerum sapiente eaque quasi quaerat. Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel rem, reiciendis dicta ratione cum sunt maiores, voluptates dolorum iste fugit officiis accusamus aliquam, asperiores voluptatum qui delectus deleniti minus cumque.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex vitae error eius laudantium labore autem, sapiente quis officia, libero natus sunt sed et ad est necessitatibus illum adipisci deleniti. Ducimus. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolor vel voluptatibus ex et eligendi enim sapiente nobis odit ipsam non? Ipsum fugiat hic eos aperiam rerum sapiente eaque quasi quaerat. Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel rem, reiciendis dicta ratione cum sunt maiores, voluptates dolorum iste fugit officiis accusamus aliquam, asperiores voluptatum qui delectus deleniti minus cumque.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex vitae error eius laudantium labore autem, sapiente quis officia, libero natus sunt sed et ad est necessitatibus illum adipisci deleniti. Ducimus. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolor vel voluptatibus ex et eligendi enim sapiente nobis odit ipsam non? Ipsum fugiat hic eos aperiam rerum sapiente eaque quasi quaerat. Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel rem, reiciendis dicta ratione cum sunt maiores, voluptates dolorum iste fugit officiis accusamus aliquam, asperiores voluptatum qui delectus deleniti minus cumque.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex vitae error eius laudantium labore autem, sapiente quis officia, libero natus sunt sed et ad est necessitatibus illum adipisci deleniti. Ducimus. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolor vel voluptatibus ex et eligendi enim sapiente nobis odit ipsam non? Ipsum fugiat hic eos aperiam rerum sapiente eaque quasi quaerat. Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel rem, reiciendis dicta ratione cum sunt maiores, voluptates dolorum iste fugit officiis accusamus aliquam, asperiores voluptatum qui delectus deleniti minus cumque.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex vitae error eius laudantium labore autem, sapiente quis officia, libero natus sunt sed et ad est necessitatibus illum adipisci deleniti. Ducimus. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolor vel voluptatibus ex et eligendi enim sapiente nobis odit ipsam non? Ipsum fugiat hic eos aperiam rerum sapiente eaque quasi quaerat. Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel rem, reiciendis dicta ratione cum sunt maiores, voluptates dolorum iste fugit officiis accusamus aliquam, asperiores voluptatum qui delectus deleniti minus cumque.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex vitae error eius laudantium labore autem, sapiente quis officia, libero natus sunt sed et ad est necessitatibus illum adipisci deleniti. Ducimus. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolor vel voluptatibus ex et eligendi enim sapiente nobis odit ipsam non? Ipsum fugiat hic eos aperiam rerum sapiente eaque quasi quaerat. Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel rem, reiciendis dicta ratione cum sunt maiores, voluptates dolorum iste fugit officiis accusamus aliquam, asperiores voluptatum qui delectus deleniti minus cumque.</p>
+
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex vitae error eius laudantium labore autem, sapiente quis officia, libero natus sunt sed et ad est necessitatibus illum adipisci deleniti. Ducimus. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolor vel voluptatibus ex et eligendi enim sapiente nobis odit ipsam non? Ipsum fugiat hic eos aperiam rerum sapiente eaque quasi quaerat. Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel rem, reiciendis dicta ratione cum sunt maiores, voluptates dolorum iste fugit officiis accusamus aliquam, asperiores voluptatum qui delectus deleniti minus cumque.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex vitae error eius laudantium labore autem, sapiente quis officia, libero natus sunt sed et ad est necessitatibus illum adipisci deleniti. Ducimus. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolor vel voluptatibus ex et eligendi enim sapiente nobis odit ipsam non? Ipsum fugiat hic eos aperiam rerum sapiente eaque quasi quaerat. Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel rem, reiciendis dicta ratione cum sunt maiores, voluptates dolorum iste fugit officiis accusamus aliquam, asperiores voluptatum qui delectus deleniti minus cumque.</p>
+    </main>
 </body>
 </html>
